fix some layout issues

--- a/static/main.css
+++ b/static/main.css
@@ -146,3 +146,8 @@ body.loading:after {
 .pull-center {
   text-align: center;
 }
+
+hr {
+  margin-top: 0;
+  margin-bottom: 0;
+}
